# pywemo

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  wemo_reset_setup.py
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/workflows/: build.yml  cflite.yml  cflite_cron.yml  docs.yml  labeler.yml  labler.yml  publish.yml  push-build-changes.yml  scorecard.yml
pywemo/: README.md  __init__.py  color.py  discovery.py  exceptions.py  ssdp.py  subscribe.py  upnp.py  util.py
pywemo/ouimeaux_device/: __init__.py  bridge.py  coffeemaker.py  crockpot.py  dimmer.py  heater.py  humidifier.py  insight.py  lightswitch.py  maker.py  motion.py  outdoor_plug.py  switch.py
pywemo/ouimeaux_device/api/: __init__.py  attributes.py  db_orm.py  long_press.py  rules.py  rules_db.py  service.py  wemo_services.py  wemo_services.pyi  wifi_setup.py  xsd_types.py
script/: build.sh  build_and_publish.sh  update_deps.sh
scripts/: bootstrap-requirements.txt_  bootstrap_requirements.txt  build.sh  build_and_publish.sh  check_dirty  clean.sh  common.sh  generate_ds.py  generate_wemo_services.py  pre-commit.sh  update_deps.sh  wemo_reset_setup.py
tests/: __init__.py  atheris_stub.py  conftest.py  test_discovery.py  test_heater.py  test_registry_notify_fuzz.py  test_ssdp.py  test_subscribe.py  test_util.py
tests/ouimeaux_device/: test_bridge.py  test_crockpot.py  test_device.py  test_dimmer.py  test_heater.py  test_humidifier.py  test_insight.py  test_lightswitch.py  test_maker.py  test_outdoor_plug.py  test_switch.py
tests/vcr/tests.ouimeaux_device.test_bridge/: WeMo_WW_2.00.11057.PVT-OWRT-Link.yaml  test_bridge_getdevicestatus.yaml  test_bridge_unavailable_light.yaml  test_group_toggle.yaml  test_group_turn_off.yaml  test_group_turn_on.yaml  test_light_color_fade.yaml  test_light_color_temperature.yaml  test_light_start_ramp.yaml  test_light_turn_off.yaml  test_light_turn_on.yaml
tests/vcr/tests.ouimeaux_device.test_crockpot/: crockpot_setup.yaml  test_off.yaml  test_on.yaml
tests/vcr/tests.ouimeaux_device.test_dimmer/: Test_PVT_OWRT_Dimmer_v1.test_brightness_on_startup.yaml  Test_PVT_OWRT_Dimmer_v1.test_set_brightness[0-0-100].yaml  Test_PVT_OWRT_Dimmer_v1.test_set_brightness[100-1-100].yaml  Test_PVT_OWRT_Dimmer_v1.test_set_brightness[45-1-45].yaml  Test_PVT_OWRT_Dimmer_v1.test_turn_off.yaml  Test_PVT_OWRT_Dimmer_v1.test_turn_on.yaml  Test_PVT_RTOS_Dimmer_v2.test_brightness_on_startup.yaml  Test_PVT_RTOS_Dimmer_v2.test_is_subscribed.yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness[0-0-100].yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness[100-1-100].yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness[45-1-45].yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness_transition[20-100-1-100].yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness_transition[20-45-1-45].yaml  Test_PVT_RTOS_Dimmer_v2.test_set_brightness_transition[60-0-0-60].yaml  Test_PVT_RTOS_Dimmer_v2.test_toggle.yaml  Test_PVT_RTOS_Dimmer_v2.test_toggle_off_transition.yaml  Test_PVT_RTOS_Dimmer_v2.test_toggle_on_transition.yaml  Test_PVT_RTOS_Dimmer_v2.test_turn_off.yaml  Test_PVT_RTOS_Dimmer_v2.test_turn_off_transition.yaml  Test_PVT_RTOS_Dimmer_v2.test_turn_on.yaml  Test_PVT_RTOS_Dimmer_v2.test_turn_on_cancels_off_transition.yaml  Test_PVT_RTOS_Dimmer_v2.test_turn_on_transition.yaml  WEMO_WW_2.00.20110904.PVT-RTOS-DimmerV2.yaml  WeMo_WW_2.00.11453.PVT-OWRT-Dimmer.yaml
tests/vcr/tests.ouimeaux_device.test_heater/: heater_setup.yaml  test_complete_workflow.yaml  test_get_state.yaml  test_get_state_force_update.yaml  test_heating_status.yaml  test_mode_persistence.yaml  test_set_mode_by_string.yaml  test_set_mode_eco.yaml  test_set_mode_frostprotect.yaml  test_set_mode_high.yaml  test_set_mode_low.yaml  test_set_target_temperature_celsius.yaml  test_set_target_temperature_range.yaml  test_set_target_temperature_rounds.yaml  test_temperature_celsius_to_fahrenheit_conversion.yaml  test_temperature_range.yaml  test_temperature_reading.yaml  test_turn_on.yaml
tests/vcr/tests.ouimeaux_device.test_humidifier/: WeMo_WW_2.00.11423.PVT-OWRT-Smart.yaml  test_desired_humidity.yaml  test_off.yaml  test_on.yaml  test_reset_filter_life.yaml  test_set_fan_mode_and_humidity.yaml
tests/vcr/tests.ouimeaux_device.test_insight/: Test_Insight.test_insight_params.yaml  Test_Insight.test_subscribe.yaml  Test_Insight.test_turn_off.yaml  Test_Insight.test_turn_on.yaml  WeMo_WW_2.00.11408.PVT-OWRT-Insight.yaml
tests/vcr/tests.ouimeaux_device.test_lightswitch/: Test_F7C030.test_turn_off.yaml  Test_NoLongPress.test_turn_off.yaml  Test_NoLongPress.test_turn_on.yaml  Test_PVT_OWRT_LS_v1.test_turn_off.yaml  Test_PVT_OWRT_LS_v1.test_turn_on.yaml  Test_WLS040.test_turn_off.yaml  Test_WLS040.test_turn_on.yaml  Test_WLS0403.test_turn_off.yaml  Test_WLS0403.test_turn_on.yaml  WeMo_WW_2.00.11408.PVT-OWRT-LS.yaml  WeMo_WW_2.00.11563.PVT-OWRT-LIGHTV2-WLS040.yaml  WeMo_WW_2.00.11563.PVT-OWRT-LIGHTV2-WLS0403.yaml  WeMo_WW_2.00.2263.PVT.yaml
tests/vcr/tests.ouimeaux_device.test_maker/: Test_Maker.test_maker_params.yaml  Test_Maker.test_turn_off.yaml  Test_Maker.test_turn_on.yaml  WeMo_WW_2.00.11423.PVT-OWRT-Maker.yaml
tests/vcr/tests.ouimeaux_device.test_outdoor_plug/: Test_WSP090.test_turn_off.yaml  Test_WSP090.test_turn_on.yaml  WEMO_WW_1.00.20081401.PVT-RTOS-OutdoorV1.yaml
tests/vcr/tests.ouimeaux_device.test_switch/: Test_F7C027.test_turn_off.yaml  Test_F7C027.test_turn_on.yaml  Test_F7C063.test_turn_off.yaml  Test_F7C063.test_turn_on.yaml  Test_WSP080.test_turn_off.yaml  Test_WSP080.test_turn_on.yaml  WEMO_WW_4.00.20101902.PVT-RTOS-SNSV4.yaml  WeMo_US_2.00.2769.PVT.yaml  WeMo_WW_2.00.11420.PVT-OWRT-SNSV2.yaml
tests/vcr/tests.test_discovery/: WeMo_US_2.00.2769.PVT.yaml
tests/vcr/tests.test_subscribe/: Test_SubscriptionRegistry.test_is_subscribed.yaml  (+7 more)
(+10 files in other folders)
