[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pywemo"
version = "1.3.1"
description = "Lightweight Python module to discover and control WeMo devices"
authors = ["Eric Severance <pywemo@esev.com>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/pywemo/pywemo"
homepage = "https://github.com/pywemo/pywemo"

keywords = ['wemo', 'api']

[tool.poetry.dependencies]
python = "^3.8.1"
ifaddr = ">=0.1.0"
requests = ">=2.0"
urllib3 = ">=1.26.0"
lxml = "^4.6"

[tool.poetry.group.dev.dependencies]
# toml is used by multiple tools to read this pyproject.toml file
toml = ">=0.10"
# formatters
black = "23.9.1"
isort = "^5.6.4"
# linters/code analysis
flake8 = "^6.0.0"
flake8-docstrings = ">=1.3.0"
flake8-bugbear = ">=20.11.1"
pylint = ">=2.17.3,<4.0.0"
rstcheck = ">=3.3.1,<7.0.0"
mypy = "^1.2.0"
# testing and code coverage
lxml-stubs = "^0.4.0"
pytest = "^7.3.1"
pytest-vcr = "1.0.2"
types-requests = ">=2.0"
coverage = "^7.2.4"
hypothesis = "^6.75.3"
# version of generateDS used to create device.py and service.py in .../api/xsd
generateDS = "2.43.2"
# other
deptry = ">=0.11,<0.13"
pre-commit = ">=2.10,<4.0"
# docs
pdoc = ">=13.1.1,<15.0.0"

[tool.poetry.group.bootstrap.dependencies]
poetry = ">=1.2.0"

[tool.coverage]
  [tool.coverage.run]
  branch = true
  data_file = ".cache/coverage"
  omit = [
    ".venv/*",
    "*/tests/*",
    "*/xsd/device.py",
    "*/xsd/service.py",
  ]
  [tool.coverage.lcov]
  output = ".cache/coverage.lcov"

[tool.deptry]
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
DEP001 = [
  # Ignore missing dependencies created by generateDS.
  "StringIO",
  "generatedsnamespaces",
  "generatedscollector",
  "generatedssuper",
  "generatedssupersuper"
]

[tool.pytest]
  [tool.pytest.ini_options]
  minversion = "6.2"
  cache_dir = ".cache/pytest"

[tool.black]
line-length = 79
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv*
    | \venv*
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["pywemo", "tests"]
skip_glob = "*/xsd/*"

[tool.mypy]
cache_dir = ".cache/mypy/"
strict = true
warn_incomplete_stub = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "vcr",
  "lxml",  # TODO: use either lxml-stubs or types-lxml (maybe more complete?)
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pywemo.ouimeaux_device.api.db_orm",
  "pywemo.ouimeaux_device.api.rules_db",
  "pywemo.ouimeaux_device.api.xsd.*",
  "tests.*",
]
ignore_errors = true

[tool.pylint]
  [tool.pylint.master]
  jobs = 0
  max-line-length = 79
  ignore-paths = "^tests/"
  extension-pkg-whitelist = "lxml"
  max-parents = 15

  [tool.pylint.typecheck]
  generated-members = [
    # can switch to qualified names instead when this is merged:
    # https://github.com/PyCQA/pylint/pull/3634
    "self.deviceevent",
    "self.basicevent",
    "self.bridge",
    "self.insight",
  ]

  [tool.pylint.reports]
  reports = "no"
